--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
-		"dev": "nodemon --exec \"node --loader ts-node/esm server.ts\""
+		"dev": "nodemon --exec \"node --loader ts-node/esm server.ts\"",
+		"start": "node --loader ts-node/esm server.ts"
 	},
 	"keywords": [],
 	"author": "",
