--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
 		"dev": "nodemon --exec \"node --loader ts-node/esm server.ts\"",
-		"start": "node --loader ts-node/esm server.ts"
+		"start": "node --import=ts-node/esm dist/server.js"
 	},
 	"keywords": [],
 	"author": "",
