--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "ES2020",
+		"target": "ES2022",
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
 		"rootDir": "./",
@@ -9,6 +9,10 @@
 		"strict": true,
 		"skipLibCheck": true,
 		"resolveJsonModule": true
+	},
+	"ts-node": {
+		"esm": true,
+		"experimentalSpecifierResolution": "node"
 	},
 	"include": ["./**/*.ts"], // Files to include in compilation
 	"exclude": ["node_modules"]
