--- a/server/package.json
+++ b/server/package.json
@@ -5,19 +5,18 @@
 	"type": "module",
 	"main": "dist/server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "tsc",
-		"dev": "nodemon --exec \"node --loader ts-node/esm server.ts\"",
-		"start": "node --import=ts-node/esm dist/server.js"
+		"start": "node dist/server.js",
+		"dev": "concurrently \"tsc -w\" \"nodemon dist/server.js\""
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^5.1.0"
+		"express": "^4.19.2"
 	},
 	"devDependencies": {
-		"@types/express": "^5.0.2",
+		"@types/express": "^4.17.21",
 		"@types/node": "^22.15.29",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
