--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.19.2"
+		"body-parser": "^2.2.0",
+		"express": "^4.19.2",
+		"firebase-admin": "^13.4.0"
 	},
 	"devDependencies": {
 		"@types/express": "^4.17.21",
